Reworked feature toggles, added VM mode to Aquarium, punted Kata to Kubedee
Also:
- experimentally switched serverless to OpenFaaS and pinned it to 7.0.4
- Prometheus Adapter 0.8.3
- Thanos 0.18.0
- Jaeger 1.21.3
- Istio 1.9.1 + Kiali 1.29.0
- OpenEBS 2.6.0 + OpenEBS-NDM 1.2.0
- Spilo 13-2.0p5
- K3S 1.20.4
- K8S 1.20.4
- Harbor 2.2.0 + Harbor-Helm 1.6.0 (temporarily disabled)
- docker-registry-proxy 0.6.3

--- a/charts/kiali-server-1.29.0/values.yaml
+++ b/charts/kiali-server-1.29.0/values.yaml
@@ -34,10 +34,13 @@ deployment:
   custom_dashboards:
     excludes: ['']
     includes: ['*']
+  hpa:
+    api_version: "autoscaling/v2beta2"
+    spec: {}
   image_name: quay.io/kiali/kiali
   image_pull_policy: "Always"
   image_pull_secrets: []
-  image_version: v1.27.0
+  image_version: v1.29.0
   ingress_enabled: true
   logger:
     log_format: "text"
@@ -56,7 +59,7 @@ deployment:
   service_annotations: {}
   service_type: ""
   tolerations: []
-  version_label: v1.27.0
+  version_label: v1.29.0
   view_only_mode: false
 
 external_services:
