--- a/charts/kiali-server-1.29.0/templates/role-viewer.yaml
+++ b/charts/kiali-server-1.29.0/templates/role-viewer.yaml
@@ -21,6 +21,12 @@ rules:
   - get
   - list
   - watch
+- apiGroups: [""]
+  resources:
+  - pods/portforward
+  verbs:
+  - create
+  - post
 - apiGroups: ["extensions", "apps"]
   resources:
   - deployments
@@ -82,4 +88,9 @@ rules:
   verbs:
   - get
   - list
+- apiGroups: ["authentication.k8s.io"]
+  resources:
+  - tokenreviews
+  verbs:
+  - create
 ...
