--- a/charts/kiali-server-1.29.0/templates/role.yaml
+++ b/charts/kiali-server-1.29.0/templates/role.yaml
@@ -22,6 +22,12 @@ rules:
   - list
   - patch
   - watch
+- apiGroups: [""]
+  resources:
+  - pods/portforward
+  verbs:
+  - create
+  - post
 - apiGroups: ["extensions", "apps"]
   resources:
   - deployments
@@ -93,4 +99,9 @@ rules:
   - list
   - patch
   - watch
+- apiGroups: ["authentication.k8s.io"]
+  resources:
+  - tokenreviews
+  verbs:
+  - create
 ...
